update initial score to 0

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <!-- score div -->
       <div class="c-score">
         <p class="c-score__title">SCORE</p>
-        <h1 id="user-score" class="c-score__output"></h1>
+        <h1 id="user-score" class="c-score__output">0</h1>
       </div>
     </header>
 
