--- a/index.html
+++ b/index.html
@@ -59,9 +59,12 @@
       <section id="game-page-2" class="game-display hide">
         <!-- user choice -->
         <article class="l-left">
-          <h2 class="choice-title">You picked</h2>
+          <div class="">
+            <!-- choice-container -->
+            <h2 class="choice-title">You picked</h2>
 
-          <div id="user-pick" class="g-choice"></div>
+            <div id="user-pick" class="g-choice"></div>
+          </div>
         </article>
         <!-- display win or lose -->
         <div id="outcome-container" class="game-display__result">
