--- a/index.html
+++ b/index.html
@@ -61,7 +61,11 @@
         <article class="l-left">
           <div class="">
             <!-- choice-container -->
-            <h2 class="choice-title">You picked</h2>
+            <h2 class="choice-title">
+              You
+              <br />
+              picked
+            </h2>
 
             <div id="user-pick" class="g-choice"></div>
           </div>
